Added Machine Learning section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
         "astrobiologických",
         "Attachements",
         "AURL",
+        "biasem",
         "biber",
         "Cirkadiánní",
         "cirkadiánním",
         "Colab",
+        "datasetu",
         "Demertzi",
         "diagnostičnost",
         "Easystats",
@@ -19,12 +21,15 @@
         "FBMI",
         "figurewithin",
         "fotopletysmografie",
+        "generalizační",
         "HDBR",
         "hipokampu",
         "Hydronaut",
         "hyperbarickém",
         "hyperkapnie",
+        "hyperparametrického",
         "hyperparametrů",
+        "Hyperparametry",
         "hypokinezi",
         "insulární",
         "insule",
@@ -66,6 +71,9 @@
         "PANGEA",
         "prefrontální",
         "pupilometrie",
+        "regularizace",
+        "regularizaci",
+        "regularizační",
         "respirace",
         "respiraci",
         "ROSCOMOS",
@@ -81,6 +89,9 @@
         "Temporoparietální",
         "temporoparietálním",
         "Tidyverse",
+        "validační",
+        "validačního",
+        "validačním",
         "vazokonstrikci",
         "vědecko",
         "vestibulárních",
