--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,64 @@
 {
     "cSpell.words": [
+        "admitanci",
+        "aferentním",
+        "akcelerometrie",
+        "ambiguus",
+        "amygdale",
+        "amygdalou",
+        "amygdaly",
         "arara",
         "astrobiologických",
+        "atrioventrikulární",
         "Attachements",
+        "augmentované",
+        "augmentovaných",
+        "augmentovanými",
         "AURL",
+        "autoenkodéru",
+        "autorytmických",
         "biasem",
         "biber",
+        "bodypletysmografie",
+        "cingulární",
+        "cingulárního",
         "Cirkadiánní",
         "cirkadiánním",
         "Colab",
+        "CVLM",
         "datasetu",
         "Demertzi",
+        "dezinhibice",
+        "dezinhibici",
         "diagnostičnost",
+        "dimenzionalitu",
+        "disinhibice",
+        "disinhibici",
+        "dvanáctisvodového",
         "Easystats",
         "elektrodermální",
         "elektroencefalografie",
         "elektrokardiografie",
+        "elektrokardiogram",
         "elektrokardiogramu",
+        "endosomatická",
+        "endosomatického",
+        "endosomatických",
+        "exosomatická",
+        "exosomatického",
         "extravehikulární",
+        "Fázická",
+        "fázické",
+        "fázickou",
         "FBMI",
         "figurewithin",
         "fotopletysmografie",
+        "frameworku",
+        "Fredrikson",
+        "ganglií",
         "generalizační",
         "HDBR",
+        "Hilbertově",
         "hipokampu",
         "Hydronaut",
         "hyperbarickém",
@@ -31,32 +67,56 @@
         "hyperparametrů",
         "Hyperparametry",
         "hypokinezi",
+        "inferiorní",
+        "inhibovat",
+        "inhibuje",
         "insulární",
         "insule",
+        "intenzivistických",
+        "interkalárním",
+        "intrakardiální",
+        "intrakardiálních",
+        "izopotenciálních",
+        "kapnografie",
+        "kapnometrie",
+        "kardioakceleračních",
+        "kaudálního",
         "Keras",
         "kognici",
+        "konjunkční",
         "kortex",
         "kortexu",
+        "kortiko",
+        "kortizolu",
         "Ksenii",
         "labelfont",
+        "Lanea",
         "lualatexmk",
         "LUNARES",
         "madsen",
         "makeglossaries",
+        "medulárních",
+        "medulárního",
         "mikrogravitace",
         "mikrogravitaci",
+        "mikrosiemens",
+        "mikrosiemeny",
         "minimalize",
         "Morphew",
         "multimodální",
         "Multimodálním",
+        "multimodálnímu",
         "NEEMO",
         "neinvazivně",
+        "neinvazivní",
         "neinvazivních",
         "neurogeneze",
         "Neurokit",
         "neurokognitivní",
         "neurokognitivním",
+        "neuronálního",
         "neuropsychofyziologické",
+        "neuropsychofyziologickém",
         "neuropsychofyziologický",
         "neuropsychofyziologických",
         "neuropsychofyziologie",
@@ -67,34 +127,73 @@
         "Neurozobrazovací",
         "neurozobrazovacích",
         "neurozobrazovacím",
+        "nositelných",
         "orbitofrontální",
+        "pacemakerami",
         "PANGEA",
+        "parietální",
+        "pletysmografie",
+        "Poincarého",
+        "Porr",
+        "posterolaterálních",
+        "prahování",
+        "předzpracovávat",
         "prefrontální",
+        "prefrontálních",
+        "pregangliovými",
+        "Prekordiální",
+        "prekordiálních",
         "pupilometrie",
         "regularizace",
         "regularizaci",
         "regularizační",
         "respirace",
         "respiraci",
+        "RMSSD",
         "ROSCOMOS",
+        "rostrálního",
         "rušivost",
+        "RVLM",
         "sakád",
         "Scikit",
+        "SDNN",
         "Sedové",
+        "sinoatriální",
+        "solitárního",
         "somatosenzorických",
+        "spirometrie",
         "stresorů",
         "Stresory",
         "subkortikálních",
+        "subkortikálního",
+        "Sudomotorická",
+        "sudomotorické",
+        "sudomotorického",
+        "sympatoexcitační",
+        "sympatoexcitačních",
         "tablewithin",
         "Temporoparietální",
         "temporoparietálním",
+        "tenzometry",
+        "Thayer",
+        "Thayera",
         "Tidyverse",
+        "Tonická",
+        "Tonické",
+        "transmembránové",
+        "vagové",
+        "vagovém",
+        "vagový",
+        "vagových",
         "validační",
         "validačního",
         "validačním",
         "vazokonstrikci",
         "vědecko",
+        "ventrolaterálního",
+        "ventromediálního",
         "vestibulárních",
-        "vestibulárním"
+        "vestibulárním",
+        "vlnkové"
     ]
 }
