--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "amygdale",
         "amygdalou",
         "amygdaly",
+        "anonymizované",
         "arara",
         "astrobiologických",
         "atrioventrikulární",
@@ -77,6 +78,8 @@
         "intrakardiální",
         "intrakardiálních",
         "izopotenciálních",
+        "jejiž",
+        "Jesenný",
         "kapnografie",
         "kapnometrie",
         "kardioakceleračních",
@@ -97,6 +100,7 @@
         "makeglossaries",
         "medulárních",
         "medulárního",
+        "metakodexu",
         "mikrogravitace",
         "mikrogravitaci",
         "mikrosiemens",
@@ -110,11 +114,13 @@
         "neinvazivně",
         "neinvazivní",
         "neinvazivních",
+        "nejdůvěrohodněji",
         "neurogeneze",
         "Neurokit",
         "neurokognitivní",
         "neurokognitivním",
         "neuronálního",
+        "Neuropsychofyziologická",
         "neuropsychofyziologické",
         "neuropsychofyziologickém",
         "neuropsychofyziologický",
@@ -143,6 +149,7 @@
         "pregangliovými",
         "Prekordiální",
         "prekordiálních",
+        "probandi",
         "pupilometrie",
         "regularizace",
         "regularizaci",
@@ -181,6 +188,7 @@
         "Tonická",
         "Tonické",
         "transmembránové",
+        "UPOL",
         "vagové",
         "vagovém",
         "vagový",
