--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,8 @@
         "Colab",
         "CVLM",
         "datasetu",
+        "datasety",
+        "Daubechiesové",
         "Demertzi",
         "dezinhibice",
         "dezinhibici",
@@ -185,6 +187,7 @@
         "Thayer",
         "Thayera",
         "Tidyverse",
+        "Tompkinsova",
         "Tonická",
         "Tonické",
         "transmembránové",
@@ -202,6 +205,7 @@
         "ventromediálního",
         "vestibulárních",
         "vestibulárním",
+        "vlnková",
         "vlnkové"
     ]
 }
