--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "amygdaly",
         "anonymizované",
         "arara",
+        "arkus",
         "astrobiologických",
         "atrioventrikulární",
         "Attachements",
@@ -20,14 +21,17 @@
         "autorytmických",
         "biasem",
         "biber",
+        "bijektivní",
         "bodypletysmografie",
         "cingulární",
         "cingulárního",
         "Cirkadiánní",
         "cirkadiánním",
+        "CLAS",
         "Colab",
         "CVLM",
         "datasetu",
+        "datasetů",
         "datasety",
         "Daubechiesové",
         "Demertzi",
@@ -35,6 +39,7 @@
         "dezinhibici",
         "diagnostičnost",
         "dimenzionalitu",
+        "dimenzionality",
         "disinhibice",
         "disinhibici",
         "dvanáctisvodového",
@@ -60,6 +65,10 @@
         "Fredrikson",
         "ganglií",
         "generalizační",
+        "Grangerova",
+        "Grangerově",
+        "Grangerovo",
+        "Grangerovy",
         "HDBR",
         "Hilbertově",
         "hipokampu",
@@ -73,6 +82,7 @@
         "inferiorní",
         "inhibovat",
         "inhibuje",
+        "inkonzistentní",
         "insulární",
         "insule",
         "intenzivistických",
@@ -84,17 +94,23 @@
         "Jesenný",
         "kapnografie",
         "kapnometrie",
+        "kapsulární",
+        "kapsulové",
         "kardioakceleračních",
         "kaudálního",
         "Keras",
         "kognici",
         "konjunkční",
+        "konvoluční",
+        "konvolučních",
+        "kopula",
         "kortex",
         "kortexu",
         "kortiko",
         "kortizolu",
         "Ksenii",
         "labelfont",
+        "laditelné",
         "Lanea",
         "lualatexmk",
         "LUNARES",
@@ -110,6 +126,7 @@
         "minimalize",
         "Morphew",
         "multimodální",
+        "multimodálního",
         "Multimodálním",
         "multimodálnímu",
         "NEEMO",
@@ -140,7 +157,10 @@
         "pacemakerami",
         "PANGEA",
         "parietální",
+        "penalizační",
+        "penalizačního",
         "pletysmografie",
+        "podvzorkování",
         "Poincarého",
         "Porr",
         "posterolaterálních",
@@ -153,8 +173,10 @@
         "prekordiálních",
         "probandi",
         "pupilometrie",
+        "regresor",
         "regularizace",
         "regularizaci",
+        "regularizací",
         "regularizační",
         "respirace",
         "respiraci",
@@ -168,6 +190,7 @@
         "SDNN",
         "Sedové",
         "sinoatriální",
+        "Sklarův",
         "solitárního",
         "somatosenzorických",
         "spirometrie",
@@ -205,7 +228,10 @@
         "ventromediálního",
         "vestibulárních",
         "vestibulárním",
+        "vícetřídovou",
+        "vícetřídový",
         "vlnková",
-        "vlnkové"
+        "vlnkové",
+        "WESAD"
     ]
 }
