--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
         "konvoluční",
         "konvolučních",
         "kopula",
+        "kopulou",
         "kortex",
         "kortexu",
         "kortiko",
@@ -116,6 +117,7 @@
         "LUNARES",
         "madsen",
         "makeglossaries",
+        "marginály",
         "medulárních",
         "medulárního",
         "metakodexu",
@@ -165,6 +167,8 @@
         "Porr",
         "posterolaterálních",
         "prahování",
+        "prediktorová",
+        "prediktorové",
         "předzpracovávat",
         "prefrontální",
         "prefrontálních",
