--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "atrioventrikulární",
         "Attachements",
         "augmentované",
+        "augmentovaný",
         "augmentovaných",
         "augmentovanými",
         "AURL",
@@ -30,6 +31,7 @@
         "CLAS",
         "Colab",
         "CVLM",
+        "datasetech",
         "datasetu",
         "datasetů",
         "datasety",
@@ -84,6 +86,7 @@
         "inhibuje",
         "inkonzistentní",
         "insulární",
+        "insulárním",
         "insule",
         "intenzivistických",
         "interkalárním",
@@ -131,6 +134,7 @@
         "multimodálního",
         "Multimodálním",
         "multimodálnímu",
+        "nadvzorkování",
         "NEEMO",
         "neinvazivně",
         "neinvazivní",
@@ -157,6 +161,7 @@
         "nositelných",
         "orbitofrontální",
         "pacemakerami",
+        "pacemakery",
         "PANGEA",
         "parietální",
         "penalizační",
@@ -167,6 +172,7 @@
         "Porr",
         "posterolaterálních",
         "prahování",
+        "predickí",
         "prediktorová",
         "prediktorové",
         "předzpracovávat",
@@ -175,6 +181,7 @@
         "pregangliovými",
         "Prekordiální",
         "prekordiálních",
+        "preselekce",
         "probandi",
         "pupilometrie",
         "regresor",
@@ -190,7 +197,9 @@
         "rušivost",
         "RVLM",
         "sakád",
+        "saturačnímu",
         "Scikit",
+        "SD2",
         "SDNN",
         "Sedové",
         "sinoatriální",
@@ -232,6 +241,7 @@
         "ventromediálního",
         "vestibulárních",
         "vestibulárním",
+        "vícetřídní",
         "vícetřídovou",
         "vícetřídový",
         "vlnková",
