Update discussion and conclusion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,20 +10,31 @@
         "anonymizované",
         "arara",
         "arkus",
+        "asistivních",
         "astrobiologických",
         "atrioventrikulární",
         "Attachements",
         "augmentované",
+        "augmentovaného",
         "augmentovaný",
         "augmentovaných",
         "augmentovanými",
         "AURL",
+        "autoencoder",
+        "autoenkodérove",
+        "autoenkodérové",
         "autoenkodéru",
         "autorytmických",
+        "Bahadori",
+        "baroreflex",
+        "benchmarkovacích",
         "biasem",
         "biber",
         "bijektivní",
+        "biosignals",
         "bodypletysmografie",
+        "cerebrovaskulární",
+        "chemoreflexu",
         "cingulární",
         "cingulárního",
         "Cirkadiánní",
@@ -46,11 +57,14 @@
         "disinhibici",
         "dvanáctisvodového",
         "Easystats",
+        "electrodermal",
         "elektrodermální",
         "elektroencefalografie",
         "elektrokardiografie",
         "elektrokardiogram",
         "elektrokardiogramu",
+        "Elgendi",
+        "emerguje",
         "endosomatická",
         "endosomatického",
         "endosomatických",
@@ -63,28 +77,40 @@
         "FBMI",
         "figurewithin",
         "fotopletysmografie",
+        "fotopletysmogram",
         "frameworku",
         "Fredrikson",
+        "frekventistického",
         "ganglií",
         "generalizační",
         "Grangerova",
         "Grangerově",
         "Grangerovo",
+        "Grangerovou",
         "Grangerovy",
+        "gyroakcelometrické",
         "HDBR",
+        "hemodynamiky",
         "Hilbertově",
         "hipokampu",
         "Hydronaut",
+        "hyperbarické",
+        "hyperbarického",
         "hyperbarickém",
+        "hyperbarickému",
+        "hyperbarickou",
+        "hyperbarických",
         "hyperkapnie",
         "hyperparametrického",
         "hyperparametrů",
         "Hyperparametry",
         "hypokinezi",
         "inferiorní",
+        "inferovat",
         "inhibovat",
         "inhibuje",
         "inkonzistentní",
+        "inkorporovat",
         "insulární",
         "insulárním",
         "insule",
@@ -93,8 +119,10 @@
         "intrakardiální",
         "intrakardiálních",
         "izopotenciálních",
+        "jednosvodového",
         "jejiž",
         "Jesenný",
+        "Kalidas",
         "kapnografie",
         "kapnometrie",
         "kapsulární",
@@ -103,9 +131,13 @@
         "kaudálního",
         "Keras",
         "kognici",
+        "kompartmentů",
+        "kompartmenty",
         "konjunkční",
+        "konsenzuální",
         "konvoluční",
         "konvolučních",
+        "konvolvováno",
         "kopula",
         "kopulou",
         "kortex",
@@ -116,6 +148,7 @@
         "labelfont",
         "laditelné",
         "Lanea",
+        "longitudinálních",
         "lualatexmk",
         "LUNARES",
         "madsen",
@@ -129,7 +162,9 @@
         "mikrosiemens",
         "mikrosiemeny",
         "minimalize",
+        "Modbus",
         "Morphew",
+        "multimodal",
         "multimodální",
         "multimodálního",
         "Multimodálním",
@@ -161,8 +196,10 @@
         "nositelných",
         "orbitofrontální",
         "pacemakerami",
+        "pacemakerem",
         "pacemakery",
         "PANGEA",
+        "parasternální",
         "parietální",
         "penalizační",
         "penalizačního",
@@ -183,6 +220,7 @@
         "prekordiálních",
         "preselekce",
         "probandi",
+        "prototypování",
         "pupilometrie",
         "regresor",
         "regularizace",
@@ -197,16 +235,21 @@
         "rušivost",
         "RVLM",
         "sakád",
+        "saturačních",
+        "saturačního",
+        "saturačním",
         "saturačnímu",
         "Scikit",
         "SD2",
         "SDNN",
         "Sedové",
+        "shlukovacích",
         "sinoatriální",
         "Sklarův",
         "solitárního",
         "somatosenzorických",
         "spirometrie",
+        "sternální",
         "stresorů",
         "Stresory",
         "subkortikálních",
@@ -217,6 +260,8 @@
         "sympatoexcitační",
         "sympatoexcitačních",
         "tablewithin",
+        "Telemedicínská",
+        "telemedicínské",
         "Temporoparietální",
         "temporoparietálním",
         "tenzometry",
@@ -228,14 +273,17 @@
         "Tonické",
         "transmembránové",
         "UPOL",
+        "vagová",
         "vagové",
         "vagovém",
+        "vagovou",
         "vagový",
         "vagových",
         "validační",
         "validačního",
         "validačním",
         "vazokonstrikci",
+        "vazokonstrikcí",
         "vědecko",
         "ventrolaterálního",
         "ventromediálního",
@@ -246,6 +294,7 @@
         "vícetřídový",
         "vlnková",
         "vlnkové",
-        "WESAD"
+        "WESAD",
+        "WLAN"
     ]
 }
