Update conclusion and readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "frekventistického",
         "ganglií",
         "generalizační",
+        "Goodfellow",
         "Grangerova",
         "Grangerově",
         "Grangerovo",
@@ -101,6 +102,7 @@
         "hyperbarickou",
         "hyperbarických",
         "hyperkapnie",
+        "hyperparametr",
         "hyperparametrického",
         "hyperparametrů",
         "Hyperparametry",
@@ -195,6 +197,7 @@
         "neurozobrazovacím",
         "nositelných",
         "orbitofrontální",
+        "overfitting",
         "pacemakerami",
         "pacemakerem",
         "pacemakery",
@@ -272,6 +275,7 @@
         "Tonická",
         "Tonické",
         "transmembránové",
+        "underfitting",
         "UPOL",
         "vagová",
         "vagové",
